Modular code + Changed order of parameters, gene column before p-val and log cols. + Standarized variable names (pval and log2F). + Modularized th code, creating a plotting function that can be called as a modula and a `main()` function that executes when the script is called from the command line. + Added width and height of the plot as parameters

--- a/src/generate_data.ipynb
+++ b/src/generate_data.ipynb
@@ -2,17 +2,22 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "ecfad99d",
+   "id": "5a311fb8",
    "metadata": {},
    "source": [
     "# Generate data\n",
-    "Generates test dataset for Volcano Plot."
+    "Generates test dataset for Volcano Plot. Uses a standard $t$ distribution to generate log2Fold change values and an exponential distribution to generate p-values. Gene names are ints taken from an interval with uniform distribution.<br>\n",
+    "\n",
+    "Kernel: `volcano`<br>\n",
+    "**Author: Juan Sebastian Diaz Boada**<br>\n",
+    "*juan.sebastian.diaz.boada@ki.se*<br>\n",
+    "11/07/22"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "0dc145b2",
+   "id": "535fc50c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e0e6d668",
+   "id": "6f7659e3",
    "metadata": {},
    "source": [
     "### Number of samples"
@@ -32,7 +37,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "e000a3cb",
+   "id": "fbc8b99c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +46,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "85bbe0a8",
+   "id": "f8c09b14",
    "metadata": {},
    "source": [
     "### Gene column\n",
@@ -51,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "f9771129",
+   "id": "bd7ad09d",
    "metadata": {},
    "outputs": [
     {
@@ -72,16 +77,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "de4ac619",
+   "id": "9da9f6d4",
    "metadata": {},
    "source": [
-    "### Log2Fold change"
+    "### Log2Fold change\n",
+    "Starndard $t$ distribution"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "6f7b22fd",
+   "id": "1c6153d1",
    "metadata": {},
    "outputs": [
     {
@@ -136,16 +142,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d46a1eca",
+   "id": "077b0a0b",
    "metadata": {},
    "source": [
-    "### P-values"
+    "### P-values\n",
+    "Truncated exponential distribution"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "d4812aac",
+   "id": "3472f825",
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +201,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5cfed56e",
+   "id": "2c478c54",
    "metadata": {},
    "source": [
     "### Dataframe generation"
@@ -203,7 +210,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "ac4afb94",
+   "id": "f825ecd5",
    "metadata": {},
    "outputs": [
     {
@@ -333,7 +340,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c10a35a1",
+   "id": "48bb8cec",
    "metadata": {},
    "source": [
     "### Export dataframe"
@@ -342,7 +349,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "ae2fca17",
+   "id": "102760b8",
    "metadata": {},
    "outputs": [],
    "source": [
